--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Greta</string>
+    <string name="app_name" translatable="false">Greta</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA0MecAsPNdD43zYoFih3hgxh7_H2Gq5Co</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_settings">Settings</string>
@@ -9,6 +10,17 @@
     <string name="permission_location_message">Greta needs to access your location</string>
     <string name="grant">Grant</string>
     <string name="cancel">Cancel</string>
-    <string name="firebase_child_data">data</string>
-    <string name="firebase_child_users">users</string>
+    <!-- Firebase Database -->
+    <string name="firebase_child_data" translatable="false">data</string>
+    <string name="firebase_child_users" translatable="false">users</string>
+
+    <!-- Sync Preferences -->
+    <string name="username_title">Username</string>
+    <string name="localisation_provider_title">Localisation provider</string>
+    <string name="localisation_update_time_frequency_title">Localisation refresh time</string>
+    <string name="localisation_update_distance_frequency_title">Localisation refresh distance</string>
+    <string name="username_key" translatable="false">username</string>
+    <string name="localisation_provider_key" translatable="false">localisation_provider</string>
+    <string name="localisation_update_time_frequency_key" translatable="false">localisation_update_time_frequency</string>
+    <string name="localisation_update_distance_frequency_key" translatable="false">localisation_update_distance_frequency</string>
 </resources>
