--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,16 @@
     <string name="localisation_provider_title">Localisation provider</string>
     <string name="localisation_update_time_frequency_title">Localisation refresh time</string>
     <string name="localisation_update_distance_frequency_title">Localisation refresh distance</string>
+    <string name="measure_title">Unit</string>
     <string name="username_key" translatable="false">username</string>
     <string name="localisation_provider_key" translatable="false">localisation_provider</string>
     <string name="localisation_update_time_frequency_key" translatable="false">localisation_update_time_frequency</string>
     <string name="localisation_update_distance_frequency_key" translatable="false">localisation_update_distance_frequency</string>
+    <string name="measure_key" translatable="false">measure</string>
+    <string name="localisation_providers_default" translatable="false">network</string>
+    <string name="localisation_update_time_frequency_default" translatable="false">5000</string>
+    <string name="localisation_update_distance_frequency_default" translatable="false">10</string>
+    <string name="localisation_automatic_key" translatable="false">localisation_automatic</string>
+    <string name="unknown_user">Unknown user</string>
+    <string name="localisation_automatic_title">Automatic</string>
 </resources>
