delete waypoint feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="name_firebase_model_key">name</string>
     <string name="set_marker_name">Give the marker a name</string>
     <string name="invalid_marker_name">Invalid marker name</string>
+    <string name="delete_marker">Delete marker</string>
 
 </resources>
